# wordle-solver-rust

./: Cargo.toml
src/: main.rs
